--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <nav>
           <div class="logo">
-            <img src="./movimax.png" alt="" />
+            <img src="./assets/movimax.png" alt="logo" />
           </div>
           <ul>
             <li><a href="index.html">Latest</a></li>
