Add Movie deck section, add movie image & styling

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,51 @@
             <li><a href="index.html">Genre</a></li>
           </ul>
         </nav>
-      </div>
+        </div>
     </header>
+    <main>
+      <div class='movies-deck container'>
+        <div class='card'>
+          <div class='image'>
+             <img src="./assets/movie.jpeg" alt="movie" />
+          </div>
+          <div class='comment-likes'>
+            <button>comments</button>
+          </div>
+        </div>
+
+        <div class='card'>
+          <div class='image'>
+             <img src="./assets/movie.jpeg" alt="movie" />
+          </div>
+          <div class='comment-likes'>
+            <button>comments</button>
+          </div>
+        </div>
+
+        <div class='card'>
+          <div class='image'>
+             <img src="./assets/movie.jpeg" alt="movie" />
+          </div>
+          <div class='comment-likes'>
+            <button>comments</button>
+          </div>
+        </div>
+
+        <div class='card'>
+          <div class='image'>
+             <img src="./assets/movie.jpeg" alt="movie" />
+          </div>
+          <div class='comment-likes'>
+            <button>comments</button>
+          </div>
+        </div>
+
+      </div>
+
+
+
+    </main>    
+ </div>
   </body>
 </html>
