Feat: Add footer

--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoviMax</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="container">
-        <nav>
-          <div class="logo">
-            <img src="./assets/movimax.png" alt="logo" />
-          </div>
-          <ul>
-            <li><a href="index.html">Latest</a></li>
-            <li><a href="index.html">Genre</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MoviMax</title>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <nav>
+        <div class="logo">
+          <img src="./assets/movimax.png" alt="logo" />
+        </div>
+        <ul>
+          <li><a href="index.html">Latest</a></li>
+          <li><a href="index.html">Genre</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <footer>
+    <p>created by <a class="footerlink" href="https://github.com/felixDev22">Felix Mozo</a> and <a class="footerlink"
+        href="https://github.com/leehaney254">Leehaney George</a></p>
+  </footer>
+</body>
+
 </html>
