--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <title>MoviMax</title>
   </head>
 
@@ -28,8 +28,8 @@
              <img src="./assets/movie.jpeg" alt="movie" />
           </div>
           <div class='comment-likes'>
-            <button>comments</button>
-            <i class="fa-light fa-heart"></i>
+            <button>Comments</button>
+            <i class="fa-sharp fa-solid fa-heart"></i>
           </div>
         </div>
 
@@ -39,6 +39,7 @@
           </div>
           <div class='comment-likes'>
             <button>comments</button>
+            <i class="fa-sharp fa-solid fa-heart"></i>
           </div>
         </div>
 
@@ -48,6 +49,7 @@
           </div>
           <div class='comment-likes'>
             <button>comments</button>
+            <i class="fa-sharp fa-solid fa-heart"></i>
           </div>
         </div>
 
@@ -57,6 +59,7 @@
           </div>
           <div class='comment-likes'>
             <button>comments</button>
+            <i class="fa-sharp fa-solid fa-heart"></i>
           </div>
         </div>
 
