Add likes indicator

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
           <div class='comment-likes'>
             <button>Comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
+            <span>26k</span>
           </div>
         </div>
 
@@ -40,6 +41,7 @@
           <div class='comment-likes'>
             <button>comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
+            <span>8k</span>
           </div>
         </div>
 
@@ -50,6 +52,7 @@
           <div class='comment-likes'>
             <button>comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
+            <span>10k</span>
           </div>
         </div>
 
@@ -60,6 +63,7 @@
           <div class='comment-likes'>
             <button>comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
+            <span>99k</span>
           </div>
         </div>
 
