Add category title and icon

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,13 @@
         </div>
     </header>
     <main>
+       <div class='category container'>
+       <h2>Comedy</h2>
+       <span><i class="fa-solid fa-face-laugh-beam"></i></span>
+          <hr>
+          </div>
       <div class='movies-deck container'>
+       
         <div class='card'>
           <div class='image'>
              <img src="./assets/movie.jpeg" alt="movie" />
@@ -66,9 +72,7 @@
             <span>99k</span>
           </div>
         </div>
-
-      </div>
-
+</div>
 
 
     </main>    
