--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,61 @@
 </div>
 
 
+<div class='category container'>
+       <h2>Action</h2>
+       <span><i class="fa-solid fa-face-grin-wink"></i></span>
+          <hr>
+          </div>
+
+      <div class='movies-deck container'>
+       
+        <div class='card'>
+          <div class='image'>
+             <img src="./assets/action.jpeg" alt="movie" />
+          </div>
+          <div class='comment-likes'>
+            <button>Comments</button>
+            <i class="fa-sharp fa-solid fa-heart"></i>
+            <span>26k</span>
+          </div>
+        </div>
+
+        <div class='card'>
+          <div class='image'>
+             <img src="./assets/action.jpeg" alt="movie" />
+          </div>
+          <div class='comment-likes'>
+            <button>comments</button>
+            <i class="fa-sharp fa-solid fa-heart"></i>
+            <span>8k</span>
+          </div>
+        </div>
+
+        <div class='card'>
+          <div class='image'>
+             <img src="./assets/action.jpeg" alt="movie" />
+          </div>
+          <div class='comment-likes'>
+            <button>comments</button>
+            <i class="fa-sharp fa-solid fa-heart"></i>
+            <span>10k</span>
+          </div>
+        </div>
+
+        <div class='card'>
+          <div class='image'>
+             <img src="./assets/action.jpeg" alt="movie" />
+          </div>
+          <div class='comment-likes'>
+            <button>comments</button>
+            <i class="fa-sharp fa-solid fa-heart"></i>
+            <span>99k</span>
+          </div>
+        </div>
+</div>
+
+
+
     </main>    
  </div>
   </body>
