Update the comment btn

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
              <img src="./assets/movie.jpeg" alt="movie" />
           </div>
           <div class='comment-likes'>
-            <button>comments</button>
+            <button>Comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
             <span>8k</span>
           </div>
@@ -56,7 +56,7 @@
              <img src="./assets/movie.jpeg" alt="movie" />
           </div>
           <div class='comment-likes'>
-            <button>comments</button>
+            <button>Comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
             <span>10k</span>
           </div>
@@ -67,7 +67,7 @@
              <img src="./assets/movie.jpeg" alt="movie" />
           </div>
           <div class='comment-likes'>
-            <button>comments</button>
+            <button>Comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
             <span>99k</span>
           </div>
@@ -99,7 +99,7 @@
              <img src="./assets/action.jpeg" alt="movie" />
           </div>
           <div class='comment-likes'>
-            <button>comments</button>
+            <button>Comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
             <span>8k</span>
           </div>
@@ -110,7 +110,7 @@
              <img src="./assets/action.jpeg" alt="movie" />
           </div>
           <div class='comment-likes'>
-            <button>comments</button>
+            <button>Comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
             <span>10k</span>
           </div>
@@ -121,7 +121,7 @@
              <img src="./assets/action.jpeg" alt="movie" />
           </div>
           <div class='comment-likes'>
-            <button>comments</button>
+            <button>Comments</button>
             <i class="fa-sharp fa-solid fa-heart"></i>
             <span>99k</span>
           </div>
