Add modules folder, update variables

--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,9 @@
             <img src="./assets/movie.jpeg" alt="movie" />
           </div>
           <div class="comment-likes">
-            <button>Comments</button>
-            <i class="fa-sharp fa-solid fa-heart"></i>
-            <span>26k</span>
+            <button id="comment">Comments</button>
+            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
+            <span id="like-num">26k</span>
           </div>
         </div>
 
@@ -47,9 +47,9 @@
             <img src="./assets/movie.jpeg" alt="movie" />
           </div>
           <div class="comment-likes">
-            <button>Comments</button>
-            <i class="fa-sharp fa-solid fa-heart"></i>
-            <span>8k</span>
+            <button id="comment">Comments</button>
+            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
+            <span id="like-num">8k</span>
           </div>
         </div>
 
@@ -58,9 +58,9 @@
             <img src="./assets/movie.jpeg" alt="movie" />
           </div>
           <div class="comment-likes">
-            <button>Comments</button>
-            <i class="fa-sharp fa-solid fa-heart"></i>
-            <span>10k</span>
+            <button id="comment">Comments</button>
+            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
+            <span id="like-num">10k</span>
           </div>
         </div>
 
@@ -69,9 +69,9 @@
             <img src="./assets/movie.jpeg" alt="movie" />
           </div>
           <div class="comment-likes">
-            <button>Comments</button>
-            <i class="fa-sharp fa-solid fa-heart"></i>
-            <span>99k</span>
+            <button id="comment">Comments</button>
+            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
+            <span id="like-num">99k</span>
           </div>
         </div>
       </div>
@@ -88,9 +88,9 @@
             <img src="./assets/action.jpeg" alt="movie" />
           </div>
           <div class="comment-likes">
-            <button>Comments</button>
-            <i class="fa-sharp fa-solid fa-heart"></i>
-            <span>26k</span>
+            <button id="comment">Comments</button>
+            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
+            <span id="like-num">26k</span>
           </div>
         </div>
 
@@ -99,9 +99,9 @@
             <img src="./assets/action.jpeg" alt="movie" />
           </div>
           <div class="comment-likes">
-            <button>Comments</button>
-            <i class="fa-sharp fa-solid fa-heart"></i>
-            <span>8k</span>
+            <button id="comment">Comments</button>
+            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
+            <span id="like-num">8k</span>
           </div>
         </div>
 
@@ -110,20 +110,20 @@
             <img src="./assets/action.jpeg" alt="movie" />
           </div>
           <div class="comment-likes">
-            <button>Comments</button>
-            <i class="fa-sharp fa-solid fa-heart"></i>
-            <span>10k</span>
+            <button id="comment">Comments</button>
+            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
+            <span id="like-num">10k</span>
           </div>
         </div>
 
         <div class="card">
           <div class="image">
-            <img src="./assets/action.jpeg" alt="movie" />
+            <img id="movie" src="./assets/action.jpeg" alt="movie" />
           </div>
           <div class="comment-likes">
-            <button>Comments</button>
-            <i class="fa-sharp fa-solid fa-heart"></i>
-            <span>99k</span>
+            <button id="comment">Comments</button>
+            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
+            <span id="like-num">99k</span>
           </div>
         </div>
       </div>
