Feat: Add popup wireframe

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       </nav>
     </div>
   </header>
+  <aside id="popup" class="nodisplay"></aside>
   <footer>
     <p>created by <a class="footerlink" href="https://github.com/felixDev22">Felix Mozo</a> and <a class="footerlink"
         href="https://github.com/leehaney254">Leehaney George</a></p>
