--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
           <img src="./assets/movie.jpeg" alt="movie" />
         </div>
         <div class="comment-likes">
-          <button>Comments</button>
+          <button class="popupbtn">Comments</button>
           <i class="fa-sharp fa-solid fa-heart"></i>
           <span>8k</span>
         </div>
@@ -57,7 +57,7 @@
           <img src="./assets/movie.jpeg" alt="movie" />
         </div>
         <div class="comment-likes">
-          <button>Comments</button>
+          <button class="popupbtn">Comments</button>
           <i class="fa-sharp fa-solid fa-heart"></i>
           <span>10k</span>
         </div>
@@ -68,7 +68,7 @@
           <img src="./assets/movie.jpeg" alt="movie" />
         </div>
         <div class="comment-likes">
-          <button>Comments</button>
+          <button class="popupbtn">Comments</button>
           <i class="fa-sharp fa-solid fa-heart"></i>
           <span>99k</span>
         </div>
@@ -87,7 +87,7 @@
           <img src="./assets/action.jpeg" alt="movie" />
         </div>
         <div class="comment-likes">
-          <button>Comments</button>
+          <button class="popupbtn">Comments</button>
           <i class="fa-sharp fa-solid fa-heart"></i>
           <span>26k</span>
         </div>
@@ -98,7 +98,7 @@
           <img src="./assets/action.jpeg" alt="movie" />
         </div>
         <div class="comment-likes">
-          <button>Comments</button>
+          <button class="popupbtn">Comments</button>
           <i class="fa-sharp fa-solid fa-heart"></i>
           <span>8k</span>
         </div>
@@ -109,7 +109,7 @@
           <img src="./assets/action.jpeg" alt="movie" />
         </div>
         <div class="comment-likes">
-          <button>Comments</button>
+          <button class="popupbtn">Comments</button>
           <i class="fa-sharp fa-solid fa-heart"></i>
           <span>10k</span>
         </div>
@@ -120,7 +120,7 @@
           <img src="./assets/action.jpeg" alt="movie" />
         </div>
         <div class="comment-likes">
-          <button>Comments</button>
+          <button class="popupbtn">Comments</button>
           <i class="fa-sharp fa-solid fa-heart"></i>
           <span>99k</span>
         </div>
