Add function to populate the number of likes

--- a/src/index.html
+++ b/src/index.html
@@ -30,51 +30,7 @@
         <span><i class="fa-solid fa-face-laugh-beam"></i></span>
         <hr />
       </div>
-      <div class="movies-deck container">
-        <div class="card">
-          <div class="image">
-            <img src="./assets/movie.jpeg" alt="movie" />
-          </div>
-          <div class="comment-likes">
-            <button id="comment">Comments</button>
-            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
-            <span id="like-num">26k</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="image">
-            <img src="./assets/movie.jpeg" alt="movie" />
-          </div>
-          <div class="comment-likes">
-            <button id="comment">Comments</button>
-            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
-            <span id="like-num">8k</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="image">
-            <img src="./assets/movie.jpeg" alt="movie" />
-          </div>
-          <div class="comment-likes">
-            <button id="comment">Comments</button>
-            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
-            <span id="like-num">10k</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="image">
-            <img src="./assets/movie.jpeg" alt="movie" />
-          </div>
-          <div class="comment-likes">
-            <button id="comment">Comments</button>
-            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
-            <span id="like-num">99k</span>
-          </div>
-        </div>
-      </div>
+      <div class="movies-deck container"></div>
 
       <div class="category container">
         <h2>Action</h2>
@@ -82,51 +38,7 @@
         <hr />
       </div>
 
-      <div class="movies-deck container">
-        <div class="card">
-          <div class="image">
-            <img src="./assets/action.jpeg" alt="movie" />
-          </div>
-          <div class="comment-likes">
-            <button id="comment">Comments</button>
-            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
-            <span id="like-num">26k</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="image">
-            <img src="./assets/action.jpeg" alt="movie" />
-          </div>
-          <div class="comment-likes">
-            <button id="comment">Comments</button>
-            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
-            <span id="like-num">8k</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="image">
-            <img src="./assets/action.jpeg" alt="movie" />
-          </div>
-          <div class="comment-likes">
-            <button id="comment">Comments</button>
-            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
-            <span id="like-num">10k</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="image">
-            <img id="movie" src="./assets/action.jpeg" alt="movie" />
-          </div>
-          <div class="comment-likes">
-            <button id="comment">Comments</button>
-            <i class="fa-sharp fa-solid fa-heart" id="like-btn"></i>
-            <span id="like-num">99k</span>
-          </div>
-        </div>
-      </div>
+      <div class="movies-deck2 container"></div>
       <footer class="container">
         <p>
           Created by
