--- a/src/index.html
+++ b/src/index.html
@@ -1,56 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    />
-    <title>MoviMax</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="container">
-        <nav>
-          <div class="logo">
-            <img src="./assets/movimax.png" alt="logo" />
-          </div>
-          <ul>
-            <li><a href="index.html">Latest</a></li>
-            <li><a href="index.html">Genre</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <div class="category container">
-        <h2>Comedy</h2>
-        <span><i class="fa-solid fa-face-laugh-beam"></i></span>
-        <hr />
-      </div>
-      <div class="movies-deck container"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <title>MoviMax</title>
+</head>
 
-      <div class="category container">
-        <h2>Action</h2>
-        <span><i class="fa-solid fa-face-grin-wink"></i></span>
-        <hr />
-      </div>
+<body>
+  <header>
+    <div class="container">
+      <nav>
+        <div class="logo">
+          <img src="./assets/movimax.png" alt="logo" />
+        </div>
+        <ul>
+          <li><a href="index.html">Latest</a></li>
+          <li><a href="index.html">Genre</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <div class="category container">
+      <h2>Comedy</h2>
+      <span><i class="fa-solid fa-face-laugh-beam"></i></span>
+      <hr />
+    </div>
+    <div class="movies-deck container"></div>
 
-      <div class="movies-deck2 container"></div>
-      <footer class="container">
-        <p>
-          Created by
-          <a class="footerlink" href="https://github.com/felixDev22">
-            Felix Nzomo</a
-          >
-          and
-          <a class="footerlink" href="https://github.com/leehaney254">
-            Leehaney George</a
-          >
-        </p>
-      </footer>
-    </main>
-  </body>
+    <div class="category container">
+      <h2>Action</h2>
+      <span><i class="fa-solid fa-face-grin-wink"></i></span>
+      <hr />
+    </div>
+
+    <div class="movies-deck2 container"></div>
+    <aside id="popups" class="nodisplay background"></aside>
+    <footer class="container">
+      <p>
+        Created by
+        <a class="footerlink" href="https://github.com/felixDev22">
+          Felix Nzomo</a>
+        and
+        <a class="footerlink" href="https://github.com/leehaney254">
+          Leehaney George</a>
+      </p>
+    </footer>
+  </main>
+</body>
+
 </html>
