--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <img src="./assets/movimax.png" alt="logo" />
           </div>
           <ul>
-            <li class="featured-counter"></li>
+            <li class="counter"></li>
             <li class="active"><a href="index.html">All</a></li>
             <li><a href="index.html">Genre</a></li>
           </ul>
