--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
           <div class="logo">
             <img src="./assets/movimax.png" alt="logo" />
           </div>
-          <ul>
+          <ul class="navLink">
             <li class="counter"></li>
             <li class="active"><a href="index.html">All</a></li>
             <li><a href="index.html">Genre</a></li>
