--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="logo">
             <img src="7b573f5210c3c068b844.png" alt="logo" />
           </div>
-          <ul>
+          <ul class="navLink">
             <li class="counter"></li>
             <li class="active"><a href="index.html">All</a></li>
             <li><a href="index.html">Genre</a></li>
